--- a/app/src/main/res/layout/menu_bar.xml
+++ b/app/src/main/res/layout/menu_bar.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="70dp"
     android:background="#5a5a5a"
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:src="@drawable/ic_android_article"
-        app:tint="#30c060" />
+        app:tint="@color/image_button_background_color" />
 
     <ImageButton
         android:id="@+id/menu_search"
@@ -21,7 +21,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:src="@drawable/ic_android_search"
-        app:tint="#30c060"/>
+        app:tint="@color/image_button_background_color"/>
 
     <ImageButton
         android:id="@+id/menu_main"
@@ -29,7 +29,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:src="@drawable/ic_android_home_page"
-        app:tint="#ff4c38"/>
+        app:tint="@color/image_button_background_color"/>
 
     <ImageButton
         android:id="@+id/menu_friends"
@@ -37,7 +37,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:src="@drawable/ic_android_friends"
-        app:tint="#30c060"/>
+        app:tint="@color/image_button_background_color"/>
 
     <ImageButton
         android:id="@+id/menu_wildfire_adding"
@@ -45,6 +45,6 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:src="@drawable/ic_android_fire"
-        app:tint="#30c060"/>
+        app:tint="@color/image_button_background_color"/>
 
 </LinearLayout>
