--- a/app/src/main/res/layout/activity_articles_page.xml
+++ b/app/src/main/res/layout/activity_articles_page.xml
@@ -33,6 +33,10 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/article_list"
+                android:background="@drawable/box"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
