--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -48,14 +48,14 @@
 
                 android:layout_width="320dp"
                 android:layout_height="200dp"
-                android:layout_marginLeft="45dp"
+                android:layout_marginStart="45dp"
 
                 android:layout_marginTop="80dp"
                 android:layout_marginEnd="45dp"
 
                 android:background="@drawable/box_green"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
 
