--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,12 +12,14 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/username"
@@ -36,7 +38,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
-                android:id="@+id/input_username"
+                android:id="@+id/input_username_sing_in"
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -59,11 +61,11 @@
                 android:text="Password"
                 android:textSize="20sp"
 
-                app:layout_constraintStart_toStartOf="@+id/input_username"
-                app:layout_constraintTop_toBottomOf="@+id/input_username" />
+                app:layout_constraintStart_toStartOf="@+id/input_username_sing_in"
+                app:layout_constraintTop_toBottomOf="@+id/input_username_sing_in" />
 
             <EditText
-                android:id="@+id/password_input"
+                android:id="@+id/password_input_sign_in"
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -88,7 +90,7 @@
                 android:textSize="16sp"
 
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/password_input" />
+                app:layout_constraintTop_toBottomOf="@id/password_input_sign_in" />
 
             <TextView
                 android:id="@+id/signup_1"
@@ -125,6 +127,14 @@
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="@id/signup_1"
                 app:layout_constraintTop_toBottomOf="@id/signup_1" />
+
+            <CheckBox
+                android:id="@+id/remember_user_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Remember Me"
+                app:layout_constraintStart_toStartOf="@+id/password_input_sign_in"
+                app:layout_constraintTop_toBottomOf="@+id/password_input_sign_in" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
