--- a/app/src/main/res/layout/single_article.xml
+++ b/app/src/main/res/layout/single_article.xml
@@ -1,52 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/box">
+    android:layout_margin="16dp"
+    android:elevation="8dp"
+    app:cardCornerRadius="6dp">
 
-    <TextView
-        android:id="@+id/txtTitle"
-        android:clickable="true"
-        android:text="TextView"
-        android:textSize="24dp"
-
-        android:layout_width="0dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="6dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:orientation="vertical">
 
-        app:layout_constraintBottom_toTopOf="@+id/txtAuthors"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        <TextView
+            android:id="@+id/txtTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textSize="22sp" />
 
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginStart="20dp" />
 
-    <TextView
-        android:id="@+id/txtAuthors"
-        android:text="TextView"
-        android:textSize="20dp"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+            <TextView
+                android:id="@+id/txtAuthors"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:text=""
+                android:textSize="18sp" />
 
-        app:layout_constraintEnd_toStartOf="@id/txtDate"
-        app:layout_constraintStart_toStartOf="@id/txtTitle"
-        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
-        app:layout_constraintBottom_toBottomOf="parent"
 
-        android:layout_marginBottom="10dp" />
+            <TextView
+                android:id="@+id/txtDate"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="end"
+                android:layout_weight="1"
+                android:text=""
+                android:textSize="10sp" />
+        </LinearLayout>
 
-    <TextView
-        android:id="@+id/txtDate"
-        android:text="TextView"
-        android:textSize="20dp"
 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    </LinearLayout>
 
-        app:layout_constraintEnd_toEndOf="@id/txtTitle"
-        app:layout_constraintTop_toBottomOf="@id/txtTitle" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.cardview.widget.CardView>
