--- a/app/src/main/res/layout/activity_search_page.xml
+++ b/app/src/main/res/layout/activity_search_page.xml
@@ -167,7 +167,7 @@
                     android:layout_width="0dp"
                     android:layout_height="40dp"
 
-                    app:layout_constraintEnd_toStartOf="@id/search_button"
+                    app:layout_constraintEnd_toStartOf="@id/add_button"
                     app:layout_constraintStart_toStartOf="@id/constraint_layout2"
                     app:layout_constraintTop_toBottomOf="@+id/date"
 
@@ -176,7 +176,7 @@
                     android:layout_marginEnd="10dp"/>
 
                 <Button
-                    android:id="@+id/search_button"
+                    android:id="@+id/add_button"
                     android:text="Search"
                     android:textColor="#000000"
                     android:textSize="10dp"
