--- a/app/src/main/res/layout/activity_wildfire_adding_page.xml
+++ b/app/src/main/res/layout/activity_wildfire_adding_page.xml
@@ -84,7 +84,7 @@
 
                 app:layout_constraintTop_toBottomOf="@+id/date"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/search_button"
+                app:layout_constraintEnd_toStartOf="@id/add_button"
 
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="10dp"
@@ -128,7 +128,7 @@
 
                 app:layout_constraintTop_toBottomOf="@+id/time"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/search_button"
+                app:layout_constraintEnd_toStartOf="@id/add_button"
 
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="10dp"
@@ -147,21 +147,21 @@
                 android:layout_marginStart="16dp" />
 
             <Button
-                android:id="@+id/search_button"
-                android:text="Search"
-                android:textSize="10dp"
-
-                android:textColor="#000000"
-                android:backgroundTint="#FF6700"
-
+                android:id="@+id/add_button"
                 android:layout_width="80dp"
                 android:layout_height="40dp"
 
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/time_input"
-
                 android:layout_marginTop="30dp"
-                android:layout_marginEnd="10dp" />
+                android:layout_marginEnd="10dp"
+
+                android:backgroundTint="#FF6700"
+                android:text="ADD"
+
+                android:textColor="#000000"
+                android:textSize="10dp"
+
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/time_input" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
