--- a/app/src/main/res/layout/username.xml
+++ b/app/src/main/res/layout/username.xml
@@ -12,67 +12,77 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:background="@drawable/oval"
         tools:ignore="MissingConstraints">
-        <TextView
-                android:id="@+id/newUserName"
-                android:text="New Username:"
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-                android:layout_width="wrap_content"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="vertical" >
+                <TextView
+                        android:id="@+id/newUserName"
+                        android:text="New Username:"
 
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
 
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"/>
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
 
-            <EditText
-                android:id="@+id/newUserNameInput"
-                android:ems="10"
-                android:inputType="textPersonName"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginTop="20dp"/>
 
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                    <EditText
+                        android:id="@+id/newUserNameInput"
+                        android:ems="10"
+                        android:inputType="textPersonName"
 
-                app:layout_constraintStart_toStartOf="@+id/newUserName"
-                app:layout_constraintTop_toBottomOf="@+id/newUserName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
 
-                android:layout_marginTop="5dp"/>
+                        app:layout_constraintStart_toStartOf="@+id/newUserName"
+                        app:layout_constraintTop_toBottomOf="@+id/newUserName"
 
-            <TextView
-                android:id="@+id/confirmPassword"
-                android:text="Enter Your Password to Confirm:"
+                        android:layout_marginTop="5dp"/>
 
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                    <TextView
+                        android:id="@+id/confirmPassword"
+                        android:text="Enter Your Password to Confirm:"
 
-                app:layout_constraintStart_toStartOf="@+id/newUserNameInput"
-                app:layout_constraintTop_toBottomOf="@+id/newUserNameInput"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
 
-                android:layout_marginTop="5dp"/>
+                        app:layout_constraintStart_toStartOf="@+id/newUserNameInput"
+                        app:layout_constraintTop_toBottomOf="@+id/newUserNameInput"
 
-            <EditText
-                android:id="@+id/confirmPasswordInput"
-                android:ems="10"
-                android:inputType="textPassword"
+                        android:layout_marginTop="5dp"/>
 
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                    <EditText
+                        android:id="@+id/confirmPasswordInput"
+                        android:ems="10"
+                        android:inputType="textPassword"
 
-                app:layout_constraintStart_toStartOf="@+id/confirmPassword"
-                app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
 
-                android:layout_marginTop="5dp" />
+                        app:layout_constraintStart_toStartOf="@+id/confirmPassword"
+                        app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
 
-            <Button
-                android:id="@+id/changeButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginTop="5dp"
-                android:text="Change"
-                app:layout_constraintTop_toBottomOf="@+id/confirmPasswordInput"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent" />
+                        android:layout_marginTop="5dp" />
+
+                    <Button
+                        android:id="@+id/changeButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="20dp"
+                        android:layout_marginEnd="20dp"
+                        android:layout_marginTop="5dp"
+                        android:text="Change"
+                        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordInput"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
