--- a/app/src/main/res/menu/settings_menu.xml
+++ b/app/src/main/res/menu/settings_menu.xml
@@ -4,7 +4,5 @@
     <item android:id="@+id/settings"
         android:title="Search"
         android:icon="@drawable/ic_android_settings"
-        app:showAsAction="always|collapseActionView"
-
-        />
+        app:showAsAction="always|collapseActionView"/>
 </menu>
