--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,21 +3,21 @@
     <item
         android:id="@+id/navigation_article"
         android:icon="@drawable/ic_android_article"
-        android:title="Article" />
+        android:title=" " />
     <item
         android:id="@+id/navigation_search"
         android:icon="@drawable/ic_android_search"
-        android:title="Search Fire" />
+        android:title=" " />
     <item
         android:id="@+id/navigation_home"
         android:icon="@drawable/ic_android_home_page"
-        android:title="Home" />
+        android:title=" " />
     <item
         android:id="@+id/navigation_friends"
         android:icon="@drawable/ic_android_friends"
-        android:title="Friends" />
+        android:title=" " />
     <item
         android:id="@+id/navigation_add_fire"
         android:icon="@drawable/ic_android_fire"
-        android:title="Add Fire" />
+        android:title=" " />
 </menu>
