--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,26 +7,26 @@
     <fragment
         android:id="@+id/navigation_article"
         android:name="WildfireAnalysisAndPredictionSystem.test2.ui.ArticleFragment"
-        android:label="fragment_article"
+        android:label="Articles"
         tools:layout="@layout/fragment_article" />
     <fragment
         android:id="@+id/navigation_search"
         android:name="WildfireAnalysisAndPredictionSystem.test2.ui.FireSearchFragment"
-        android:label="fragment_fire_search"
+        android:label="Fire Search"
         tools:layout="@layout/fragment_fire_search" />
     <fragment
         android:id="@+id/navigation_home"
         android:name="WildfireAnalysisAndPredictionSystem.test2.ui.HomeFragment"
-        android:label="fragment_main_menu"
+        android:label="Home"
         tools:layout="@layout/fragment_main_menu" />
     <fragment
         android:id="@+id/navigation_friends"
         android:name="WildfireAnalysisAndPredictionSystem.test2.ui.FriendsFragment"
-        android:label="fragment_friends"
+        android:label="Friends"
         tools:layout="@layout/fragment_friends" />
     <fragment
         android:id="@+id/navigation_add_fire"
         android:name="WildfireAnalysisAndPredictionSystem.test2.ui.FireAddFragment"
-        android:label="fragment_fire_add"
+        android:label="Fire Report"
         tools:layout="@layout/fragment_fire_add" />
 </navigation>
