--- a/app/src/main/res/layout/single_daily_wildfires.xml
+++ b/app/src/main/res/layout/single_daily_wildfires.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:layout_margin="16dp"
-android:elevation="8dp"
-app:cardCornerRadius="6dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="16dp"
+    android:elevation="8dp"
+    app:cardCornerRadius="6dp">
 
 
 
@@ -17,19 +17,19 @@ app:cardCornerRadius="6dp">
         android:orientation="horizontal">
 
         <ImageButton
-            android:id="@+id/is_fav"
+
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="#00FFFFFF"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_star_outline"
+            app:srcCompat="@drawable/ic_android_fire"
             app:layout_constraintBottom_toBottomOf="@id/county_name"/>
 
 
 
         <TextView
-            android:id="@+id/county_name"
+            android:id="@+id/daily_wild_fire"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_horizontal|center_vertical"
