--- a/app/src/main/res/layout/activity_sign_in_page.xml
+++ b/app/src/main/res/layout/activity_sign_in_page.xml
@@ -86,7 +86,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="20dp"
 
-                android:text="Sign in"
+                android:text="SIGN IN"
                 android:textSize="16sp"
 
                 app:layout_constraintEnd_toEndOf="parent"
