--- a/app/src/main/res/layout/activity_settings_page.xml
+++ b/app/src/main/res/layout/activity_settings_page.xml
@@ -61,18 +61,6 @@
                 android:layout_marginTop="15dp" />
 
             <TextView
-                android:id="@+id/radius"
-                android:text="1"
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                app:layout_constraintStart_toEndOf="@id/radiusBar"
-                app:layout_constraintTop_toTopOf="@id/radiusBar"
-
-                android:layout_marginStart="30dp" />
-
-            <TextView
                 android:id="@+id/settings_rate"
                 android:text="Rate Us"
 
@@ -97,20 +85,6 @@
 
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="15dp" />
-
-            <SeekBar
-                android:id="@+id/radiusBar"
-
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="16dp"
-                app:layout_constraintEnd_toEndOf="@id/settings_notification_radius"
-
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/settings_notification_radius" />
 
             <Button
                 android:id="@+id/button_delete_account"
@@ -140,27 +114,29 @@
 
             <TextView
                 android:id="@+id/title_account_settings"
-                android:text="Account Settings"
-                android:textSize="15dp"
-
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="30dp" />
+                android:layout_marginTop="30dp"
+
+                android:text="Account Settings"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+
+                android:textSize="17dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/guide_director"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="40dp"
+
+                android:layout_marginTop="40dp"
                 android:text="How to Use"
 
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="40dp"
-
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/settings_share" />
 
@@ -179,17 +155,18 @@
 
             <TextView
                 android:id="@+id/settings_about_us"
-                android:text="About Us"
-                android:textSize="15dp"
-
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/radiusBar"
-
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="30dp" />
+                android:layout_marginTop="30dp"
+                android:text="About Us"
+
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+
+                android:textSize="17dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/settings_fav_counties" />
 
             <TextView
                 android:id="@+id/settings_email"
@@ -205,29 +182,17 @@
                 android:layout_marginTop="15dp" />
 
             <TextView
-                android:id="@+id/km"
-                android:text="km"
-
+                android:id="@+id/settings_fav_counties"
                 android:layout_width="wrap_content"
+
                 android:layout_height="wrap_content"
+                android:layout_marginStart="40dp"
 
-                app:layout_constraintStart_toEndOf="@id/radius"
-                app:layout_constraintTop_toTopOf="@id/radius"
-
-                android:layout_marginStart="5dp" />
-
-            <TextView
-                android:id="@+id/settings_notification_radius"
-                android:text="Change Notification Radius"
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:text="Favorite Counties"
 
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/settings_password"
-
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="15dp" />
+                app:layout_constraintTop_toBottomOf="@id/settings_password" />
 
             <ImageView
                 android:id="@+id/imageView"
@@ -258,13 +223,13 @@
                 android:id="@+id/imageView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/ic_notifications_black_24dp"
+                android:layout_marginEnd="5dp"
 
-                app:layout_constraintEnd_toStartOf="@+id/settings_notification_radius"
-                app:layout_constraintTop_toTopOf="@+id/settings_notification_radius"
-                app:layout_constraintBottom_toBottomOf="@id/settings_notification_radius"
+                app:layout_constraintBottom_toBottomOf="@id/settings_fav_counties"
+                app:layout_constraintEnd_toStartOf="@+id/settings_fav_counties"
+                app:layout_constraintTop_toTopOf="@+id/settings_fav_counties"
 
-                android:layout_marginEnd="5dp"/>
+                app:srcCompat="@drawable/ic_android_bookmark" />
 
             <ImageView
                 android:id="@+id/imageView4"
